--- a/style.css
+++ b/style.css
@@ -5,18 +5,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #006eff;
+  background-color: #7e7d7d;
   color: #000000;
 }
 
 header {
-  background: #4a90e2;
-  color: white;
+  background: #ffffffdb;
+  color: rgb(5, 2, 2);
   padding: 1rem;
   text-align: center;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 6px #00ffff;
 }
 
 header h1 {
@@ -48,10 +48,10 @@ main {
 }
 
 section {
-  background: white;
+  background: #ffffffdb;
   padding: 1rem;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 0px 15px#00ffff;
   flex: 1;
   min-width: 250px;
 }
