--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ header h1 {
   letter-spacing: 1px;
 }
 
+h2 {
+  text-align: center;
+  text-shadow: 0 1px 1px #00ffff;;
+}
+
 
 nav button {
   margin-left: 0.5rem;
